--- a/index.html
+++ b/index.html
@@ -48,16 +48,31 @@
             margin-top: 10px;
         }
         .install-button {
-            background-color: #007bff;
-            color: white;
-            padding: 12px;
-            font-size: 18px;
-            border: none;
-            cursor: pointer;
-            width: 100%;
-            margin: 15px 0;
-            border-radius: 5px;
-        }
+    display: inline-block;
+    background-color: #007bff;
+    color: white;
+    text-align: center;
+    font-size: 18px;
+    font-weight: bold;
+    padding: 12px 20px;
+    width: 90%;
+    margin: 15px 0;
+    border-radius: 5px;
+    text-decoration: none;
+    transition: background-color 0.3s ease, transform 0.2s ease;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.install-button:hover {
+    background-color: #0056b3;
+    transform: scale(1.02);
+}
+
+.install-button:active {
+    background-color: #004494;
+    transform: scale(0.98);
+}
+
         .screenshots {
             display: flex;
             justify-content: space-between;
@@ -129,10 +144,7 @@
         </div>
 
         <!-- Install Button -->
-        <a href="/ZltTopup.apk" class="install-button" download>
-
-            <button class="install-button">Install</button>
-        </a>
+        <a href="/ZltTopup.apk" class="install-button" download>Download & Install</a>
 
        
 
